internal/compiler/testdata/fuzz/crashers/0647a484c756870a51f075e6a5a7a57cef20c857.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x1141232]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c220, 0x0, 0x99, 0x11a9640, 0x13, 0x11a9640)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c220, 0xc0000e22c0, 0xc000010230, 0xc0000731b0, 0x11069fc, 0xc0000101d0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b5
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c220, 0xc0000e2840, 0x11a8840, 0xc000010230, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:253 +0x67a
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c220, 0xc0000e2000, 0x11a8840, 0xc000010220, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c220, 0xc0000e1600, 0x11a8840, 0xc000010210, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c220, 0xc0000e0dc0, 0x11a8840, 0xc000010200, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c220, 0xc0000e0580, 0x11a8840, 0xc0000101f0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c220, 0xc00007fb80, 0x11a8840, 0xc0000101e0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00000c220, 0xc00007f340, 0x11a9640, 0xc00002bbc0, 0xc000073ae8, 0x11069fc)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:257 +0x7a2
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileResultColumn(0xc00000c220, 0xc00005a180, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0xc000073ad0, 0x100af5c)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:228 +0x221
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCoreSelect(0xc00000c220, 0xc00006a3c0, 0x100b456, 0xc0000c2ac0, 0x40, 0x38)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:142 +0xf1
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelectCore(0xc00000c220, 0xc00006a3c0, 0x0, 0xc000073c60, 0x1010f93, 0xc0000c2ac0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:117 +0x129
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc00000c220, 0xc0000681e0, 0x0, 0x2, 0xc0000163f3, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:70 +0xb6
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc00000c220, 0xc000066300, 0x0, 0x2, 0xc0000163f3, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7e
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc00000c220, 0xc000066300, 0x0, 0x0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x8b81000, 0x16, 0x16, 0x3)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc000073f70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2